--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0337.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0337.html
@@ -58,11 +58,6 @@
             <ins class="alt" title="nlp 2.00">κατ᾿</ins>
           </span>
         </span>
-        <span id="w_8_0_1" class="ocr_word" title="bbox 691 296 783 327">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_8_1" class="ocr_word" title="bbox 691 296 783 327">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">αὐτὸν</ins>
@@ -85,7 +80,7 @@
         </span>
         <span id="w_12" class="ocr_word" title="bbox 1590 299 1681 344" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μὲν</ins>
+            <ins title="nlp 2.00">μὲν καὶ</ins>
           </span>
         </span>
       </span>
@@ -359,12 +354,7 @@
         </span>
         <span id="w_67_0" class="ocr_word" title="bbox 400 821 758 887">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">(Πεντήγοστις</ins>
-          </span>
-        </span>
-        <span id="w_67_1" class="ocr_word" title="bbox 400 821 758 887">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">(Πεντήγοστις</ins>
           </span>
         </span>
         <span id="w_68" class="ocr_word" title="bbox 790 839 944 871" lang="grc">
@@ -389,7 +379,7 @@
         </span>
         <span id="w_72" class="ocr_word" title="bbox 1344 823 1572 886" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">βασιλεὺς</ins>
+            <ins title="nlp 2.00">βασιλεὺς ὑπείξας</ins>
           </span>
         </span>
       </span>
@@ -587,11 +577,6 @@
             <ins class="alt" title="nlp 2.00">καθᾶραι</ins>
           </span>
         </span>
-        <span id="w_112_1" class="ocr_word" title="bbox 413 1210 634 1275">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_113" class="ocr_word" title="bbox 680 1207 1002 1273" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">λουσάμενον.</ins>
@@ -609,7 +594,7 @@
         </span>
         <span id="w_116" class="ocr_word" title="bbox 1537 1207 1669 1259" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αὐτῷ</ins>
+            <ins title="nlp 2.00">αὐτῷ ἤδη</ins>
           </span>
         </span>
       </span>
@@ -1111,7 +1096,7 @@
         </span>
         <span id="w_213" class="ocr_word" title="bbox 1498 2063 1680 2129" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δεινὸς</ins>
+            <ins title="nlp 2.00">(δεινὸς</ins>
           </span>
         </span>
         <span id="w_214" class="ocr_word" title="bbox 1705 2083 1798 2128" lang="grc">
@@ -1225,11 +1210,6 @@
             <ins class="alt" title="nlp 2.00">ἢ</ins>
           </span>
         </span>
-        <span id="w_235_1" class="ocr_word" title="bbox 759 2319 791 2363">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_236" class="ocr_word" title="bbox 831 2316 900 2358" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εἰς</ins>
@@ -1252,7 +1232,7 @@
         </span>
         <span id="w_240" class="ocr_word" title="bbox 1414 2295 1499 2346" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸν</ins>
+            <ins title="nlp 2.00">τὸν Πετριτζὸν</ins>
           </span>
         </span>
       </span>
