--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0465.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0465.html
@@ -33,7 +33,7 @@
         </span>
         <span id="w_4" class="ocr_word" title="bbox 1892 216 1905 227">
           <span class="alternatives">
-            <ins title="nlp 2.00"> ·</ins>
+            <ins title="nlp 2.00">·</ins>
           </span>
         </span>
       </span>
@@ -678,7 +678,7 @@
         </span>
         <span id="w_129" class="ocr_word" title="bbox 578 1430 680 1494" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(καὶ</ins>
+            <ins title="nlp 2.00">καὶ</ins>
           </span>
         </span>
         <span id="w_130" class="ocr_word" title="bbox 720 1427 811 1495" lang="grc">
