--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0338.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0338.html
@@ -326,11 +326,6 @@
             <ins class="alt" title="nlp 2.00">Ἀλλ᾿</ins>
           </span>
         </span>
-        <span id="w_59_1" class="ocr_word" title="bbox 462 836 719 896">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_60_0" class="ocr_word" title="bbox 754 858 822 903">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">ἵνα</ins>
@@ -363,7 +358,7 @@
         </span>
         <span id="w_65" class="ocr_word" title="bbox 1696 858 1753 888" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὰ</ins>
+            <ins title="nlp 2.00">τὰ κατὰ</ins>
           </span>
         </span>
       </span>
