--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0414.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0414.html
@@ -1001,16 +1001,11 @@
         </span>
         <span id="w_195_1" class="ocr_word" title="bbox 1767 1932 1881 1980">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">D</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 186 2004 1881 2073">
-        <span id="w_197" class="ocr_word" title="bbox 186 2016 437 2073" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σπαρῆναι</ins>
-          </span>
-        </span>
         <span id="w_198" class="ocr_word" title="bbox 474 2004 677 2068" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τούτους</ins>
