--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0466.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0466.html
@@ -69,16 +69,11 @@
         </span>
         <span id="w_11" class="ocr_word" title="bbox 1789 357 1877 389" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πο-</ins>
+            <ins title="nlp 2.00">πολεμικὸν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 181 413 1878 486">
-        <span id="w_12" class="ocr_word" title="bbox 181 425 377 486" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λεμικὸν</ins>
-          </span>
-        </span>
         <span id="w_13" class="ocr_word" title="bbox 415 416 668 468" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">συνέκλειέ</ins>
@@ -314,16 +309,11 @@
         </span>
         <span id="w_59" class="ocr_word" title="bbox 1805 734 1881 791" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐξ-</ins>
+            <ins title="nlp 2.00">ἐξογκύσης</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 183 804 1931 875">
-        <span id="w_60" class="ocr_word" title="bbox 183 823 424 875" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ογκούσης</ins>
-          </span>
-        </span>
         <span id="w_61" class="ocr_word" title="bbox 471 806 530 860" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὰ</ins>
@@ -586,16 +576,11 @@
         </span>
         <span id="w_112" class="ocr_word" title="bbox 1648 1195 1881 1264" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὠρρώδη-</ins>
+            <ins title="nlp 2.00">ὠρρώδησαν,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 186 1270 1883 1343">
-        <span id="w_113" class="ocr_word" title="bbox 186 1292 298 1341" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σαν,</ins>
-          </span>
-        </span>
         <span id="w_114" class="ocr_word" title="bbox 336 1294 428 1325" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οὐκ</ins>
@@ -638,16 +623,11 @@
         </span>
         <span id="w_122" class="ocr_word" title="bbox 1669 1276 1883 1343" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γραψαί-</ins>
+            <ins title="nlp 2.00">γραψαίμην.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 184 1353 1886 1420">
-        <span id="w_123" class="ocr_word" title="bbox 184 1373 296 1419" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μην.</ins>
-          </span>
-        </span>
         <span id="w_124" class="ocr_word" title="bbox 361 1373 445 1403" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
@@ -745,23 +725,18 @@
             <ins class="alt" title="nlp 1.00">γε</ins>
           </span>
         </span>
-        <span id="w_143" class="ocr_word" title="bbox 1702 1436 1886 1482" lang="grc">
+        <span id="w_143_0" class="ocr_word" title="bbox 1702 1436 1886 1482">
           <span class="alternatives">
-            <ins title="nlp 2.00">Κοντο-</ins>
+            <ins class="alt" title="nlp 2.00">Κοντοστέφανοι</ins>
           </span>
         </span>
-        <span id="w_144" class="ocr_word" title="bbox 1911 1455 1944 1487">
+        <span id="w_143_1" class="ocr_word" title="bbox 1702 1436 1886 1482">
           <span class="alternatives">
-            <ins title="nlp 2.00">D</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 186 1508 1889 1577">
-        <span id="w_145" class="ocr_word" title="bbox 186 1509 422 1574" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">στέφανοι</ins>
-          </span>
-        </span>
         <span id="w_146" class="ocr_word" title="bbox 471 1529 554 1559" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
@@ -1214,16 +1189,11 @@
         </span>
         <span id="w_235" class="ocr_word" title="bbox 1596 2304 1890 2355" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">προσχωρή-</ins>
+            <ins title="nlp 2.00">προσχωρήσαντες</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 190 2364 1962 2433">
-        <span id="w_236" class="ocr_word" title="bbox 190 2382 362 2426" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σαντες</ins>
-          </span>
-        </span>
         <span id="w_237" class="ocr_word" title="bbox 400 2369 481 2417" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">διὰ</ins>
