--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0339.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0339.html
@@ -716,11 +716,6 @@
             <ins class="alt" title="nlp 2.00">ὢν</ins>
           </span>
         </span>
-        <span id="w_140_1" class="ocr_word" title="bbox 107 1396 179 1425">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_141" class="ocr_word" title="bbox 215 1372 416 1441" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀγαθοῦ</ins>
@@ -758,12 +753,7 @@
         </span>
         <span id="w_148" class="ocr_word" title="bbox 1527 1393 1618 1438" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὴν</ins>
-          </span>
-        </span>
-        <span id="w_149" class="ocr_word" title="bbox 1654 1376 1797 1439" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">βασιλέως</ins>
+            <ins title="nlp 2.00">τὴν βασιλέως 15</ins>
           </span>
         </span>
       </span>
@@ -904,11 +894,6 @@
             <ins class="alt" title="nlp 2.00">ὢν</ins>
           </span>
         </span>
-        <span id="w_178_1" class="ocr_word" title="bbox 441 1704 514 1733">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_179" class="ocr_word" title="bbox 565 1683 952 1749" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">βυσσοδομεύων</ins>
@@ -926,7 +911,7 @@
         </span>
         <span id="w_182" class="ocr_word" title="bbox 1309 1683 1664 1749" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αὐτοκράτορος</ins>
+            <ins title="nlp 2.00">αὐτοκράτορος καὶ</ins>
           </span>
         </span>
       </span>
@@ -1411,11 +1396,6 @@
             <ins class="alt" title="nlp 2.00">ἂν</ins>
           </span>
         </span>
-        <span id="w_278_1" class="ocr_word" title="bbox 718 2556 785 2586">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_279" class="ocr_word" title="bbox 818 2535 1152 2602" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">προσεπέλασε,</ins>
@@ -1438,7 +1418,7 @@
         </span>
         <span id="w_284" class="ocr_word" title="bbox 1615 2553 1794 2600" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὅρκων,</ins>
+            <ins title="nlp 2.00">ὅρκων, 30</ins>
           </span>
         </span>
       </span>
