--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0415.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0415.html
@@ -1224,9 +1224,14 @@
             <ins class="alt" title="nlp 1.00">ἤδη</ins>
           </span>
         </span>
-        <span id="w_241" class="ocr_word" title="bbox 1364 2435 1465 2499" lang="grc">
+        <span id="w_241_0" class="ocr_word" title="bbox 1364 2435 1465 2499">
           <span class="alternatives">
-            <ins title="nlp 2.00">(καὶ</ins>
+            <ins class="alt" title="nlp 2.00">(καὶ</ins>
+          </span>
+        </span>
+        <span id="w_241_1" class="ocr_word" title="bbox 1364 2435 1465 2499">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_242" class="ocr_word" title="bbox 1518 2455 1611 2501" lang="grc">
@@ -1237,11 +1242,6 @@
         <span id="w_243" class="ocr_word" title="bbox 1664 2433 1689 2485" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὁ</ins>
-          </span>
-        </span>
-        <span id="w_244" class="ocr_word" title="bbox 1738 2444 1824 2485" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
       </span>
