--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0528.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0528.html
@@ -1004,23 +1004,18 @@
             <ins class="alt" title="nlp 1.00">ἵπποις</ins>
           </span>
         </span>
-        <span id="w_193" class="ocr_word" title="bbox 1795 1975 1880 2006" lang="grc">
+        <span id="w_193_0" class="ocr_word" title="bbox 1795 1975 1880 2006">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐπ-</ins>
+            <ins class="alt" title="nlp 2.00">ἐποχηθέντες</ins>
           </span>
         </span>
-        <span id="w_194" class="ocr_word" title="bbox 1904 1977 1937 2009">
+        <span id="w_193_1" class="ocr_word" title="bbox 1795 1975 1880 2006">
           <span class="alternatives">
-            <ins title="nlp 2.00">B</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 183 2031 1882 2099">
-        <span id="w_195" class="ocr_word" title="bbox 183 2032 448 2098" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">οχηθέντες</ins>
-          </span>
-        </span>
         <span id="w_196" class="ocr_word" title="bbox 483 2048 647 2099" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὥσπερ</ins>
@@ -1503,19 +1498,19 @@
             <ins class="alt" title="nlp 1.00">τριήρεις</ins>
           </span>
         </span>
-        <span id="w_291" class="ocr_word" title="bbox 1288 2885 1607 2950" lang="grc">
+        <span id="w_291_0" class="ocr_word" title="bbox 1288 2885 1607 2950">
           <span class="alternatives">
-            <ins title="nlp 2.00">(δυοκαιδεκα</ins>
+            <ins class="alt" title="nlp 2.00">(δυοκαίδεκα</ins>
+          </span>
+        </span>
+        <span id="w_291_1" class="ocr_word" title="bbox 1288 2885 1607 2950">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_292" class="ocr_word" title="bbox 1656 2884 1710 2933" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δὲ</ins>
-          </span>
-        </span>
-        <span id="w_293" class="ocr_word" title="bbox 1753 2886 1880 2948" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἦσαν</ins>
           </span>
         </span>
       </span>
