--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0340.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0340.html
@@ -850,11 +850,6 @@
             <ins class="alt" title="nlp 2.00">Ἀλλ᾿</ins>
           </span>
         </span>
-        <span id="w_164_1" class="ocr_word" title="bbox 457 1769 587 1824">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_165" class="ocr_word" title="bbox 630 1774 931 1825" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐπανακτέον</ins>
@@ -882,7 +877,7 @@
         </span>
         <span id="w_170" class="ocr_word" title="bbox 1583 1770 1805 1841" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀπερρύη</ins>
+            <ins title="nlp 2.00">ἀπερρύη καὶ</ins>
           </span>
         </span>
       </span>
@@ -969,14 +964,9 @@
             <ins class="alt" title="nlp 2.00">καθ᾿</ins>
           </span>
         </span>
-        <span id="w_187_0_1" class="ocr_word" title="bbox 1441 1933 1547 1977">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_187_1" class="ocr_word" title="bbox 1441 1933 1547 1977">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">ἑαυτοῦ</ins>
+            <ins title="nlp 2.00">ἑαυτοῦ τοῦ</ins>
           </span>
         </span>
       </span>
