--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0529.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0529.html
@@ -377,9 +377,9 @@
             <ins class="alt" title="nlp 1.00">πολλὰ</ins>
           </span>
         </span>
-        <span id="w_71" class="ocr_word" title="bbox 1703 877 1812 920" lang="grc">
+        <span id="w_71_0" class="ocr_word" title="bbox 1703 877 1812 920">
           <span class="alternatives">
-            <ins title="nlp 2.00">τοῦ-</ins>
+            <ins class="alt" title="nlp 2.00">τοῦτον</ins>
           </span>
         </span>
       </span>
@@ -387,11 +387,6 @@
         <span id="w_72" class="ocr_word" title="bbox 72 961 106 993">
           <span class="alternatives">
             <ins title="nlp 2.00">D</ins>
-          </span>
-        </span>
-        <span id="w_73" class="ocr_word" title="bbox 131 965 215 997" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">τον</ins>
           </span>
         </span>
         <span id="w_74" class="ocr_word" title="bbox 252 944 319 1007" lang="grc">
