--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0417.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0417.html
@@ -178,9 +178,9 @@
             <ins class="alt" title="nlp 1.00">τῆς</ins>
           </span>
         </span>
-        <span id="w_34" class="ocr_word" title="bbox 1689 524 1800 555" lang="grc">
+        <span id="w_34_0" class="ocr_word" title="bbox 1689 524 1800 555">
           <span class="alternatives">
-            <ins title="nlp 2.00">τού-</ins>
+            <ins class="alt" title="nlp 2.00">τούτων</ins>
           </span>
         </span>
       </span>
@@ -188,11 +188,6 @@
         <span id="w_35" class="ocr_word" title="bbox 53 601 86 634">
           <span class="alternatives">
             <ins title="nlp 2.00">Β</ins>
-          </span>
-        </span>
-        <span id="w_36" class="ocr_word" title="bbox 110 601 207 632" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">των</ins>
           </span>
         </span>
         <span id="w_37" class="ocr_word" title="bbox 263 585 497 639" lang="grc">
@@ -675,23 +670,18 @@
             <ins class="alt" title="nlp 1.00">Χριστιανῶν</ins>
           </span>
         </span>
-        <span id="w_132" class="ocr_word" title="bbox 1545 1354 1805 1416" lang="grc">
+        <span id="w_132_0" class="ocr_word" title="bbox 1545 1354 1805 1416">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐπαναζεύ-</ins>
+            <ins class="alt" title="nlp 2.00">ἐπαναζεύγνυσι</ins>
           </span>
         </span>
-        <span id="w_133" class="ocr_word" title="bbox 1829 1379 1869 1410">
+        <span id="w_132_1" class="ocr_word" title="bbox 1545 1354 1805 1416">
           <span class="alternatives">
-            <ins title="nlp 2.00">15</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 110 1427 1807 1502">
-        <span id="w_134" class="ocr_word" title="bbox 110 1451 257 1502" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">γνυσι</ins>
-          </span>
-        </span>
         <span id="w_135" class="ocr_word" title="bbox 282 1453 404 1501" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πρὸς</ins>
