--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0582.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0582.html
@@ -546,9 +546,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 158 1238 1853 1307">
-        <span id="w_106" class="ocr_word" title="bbox 303 1249 332 1301" lang="grc">
+        <span id="w_106_0" class="ocr_word" title="bbox 303 1249 332 1301">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ψ</ins>
+            <ins class="alt" title="nlp 2.00">νον,</ins>
+          </span>
+        </span>
+        <span id="w_106_1" class="ocr_word" title="bbox 303 1249 332 1301">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">+</ins>
           </span>
         </span>
         <span id="w_107" class="ocr_word" title="bbox 365 1238 763 1292" lang="grc">
@@ -574,11 +579,6 @@
         <span id="w_111" class="ocr_word" title="bbox 1484 1242 1630 1293" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὁποία</ins>
-          </span>
-        </span>
-        <span id="w_112" class="ocr_word" title="bbox 1669 1248 1853 1293" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἴωθεν</ins>
           </span>
         </span>
       </span>
