--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0341.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0341.html
@@ -325,11 +325,6 @@
             <ins class="alt" title="nlp 2.00">ἓν</ins>
           </span>
         </span>
-        <span id="w_61_1" class="ocr_word" title="bbox 1202 752 1262 801">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_62" class="ocr_word" title="bbox 1288 771 1339 802" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸ</ins>
@@ -337,7 +332,7 @@
         </span>
         <span id="w_63" class="ocr_word" title="bbox 1365 759 1470 802" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πᾶν</ins>
+            <ins title="nlp 2.00">πᾶν συναγαγὼν</ins>
           </span>
         </span>
       </span>
@@ -616,12 +611,7 @@
         </span>
         <span id="w_119_0" class="ocr_word" title="bbox 1526 1297 1720 1362">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">πρωΐας</ins>
-          </span>
-        </span>
-        <span id="w_119_1" class="ocr_word" title="bbox 1526 1297 1720 1362">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">πρωΐας ὁ</ins>
           </span>
         </span>
       </span>
