--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0468.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0468.html
@@ -67,23 +67,18 @@
             <ins class="alt" title="nlp 1.00">ποταμοῦ</ins>
           </span>
         </span>
-        <span id="w_11" class="ocr_word" title="bbox 1716 338 1852 401" lang="grc">
+        <span id="w_11_0" class="ocr_word" title="bbox 1716 338 1852 401">
           <span class="alternatives">
-            <ins title="nlp 2.00">Δρυ-</ins>
+            <ins class="alt" title="nlp 2.00">Δρυμόνος</ins>
           </span>
         </span>
-        <span id="w_12" class="ocr_word" title="bbox 1876 350 1907 380">
+        <span id="w_11_1" class="ocr_word" title="bbox 1716 338 1852 401">
           <span class="alternatives">
-            <ins title="nlp 2.00">Β</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 151 407 1852 480">
-        <span id="w_13" class="ocr_word" title="bbox 151 412 300 480" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μόνος</ins>
-          </span>
-        </span>
         <span id="w_14" class="ocr_word" title="bbox 349 412 657 477" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ναυσιπόρου</ins>
@@ -505,23 +500,18 @@
             <ins class="alt" title="nlp 1.00">τοῖν</ins>
           </span>
         </span>
-        <span id="w_98" class="ocr_word" title="bbox 1710 1039 1852 1103" lang="grc">
+        <span id="w_98_0" class="ocr_word" title="bbox 1710 1039 1852 1103">
           <span class="alternatives">
-            <ins title="nlp 2.00">βασι-</ins>
+            <ins class="alt" title="nlp 2.00">βασιλέοιν</ins>
           </span>
         </span>
-        <span id="w_99" class="ocr_word" title="bbox 1878 1056 1905 1089">
+        <span id="w_98_1" class="ocr_word" title="bbox 1710 1039 1852 1103">
           <span class="alternatives">
-            <ins title="nlp 2.00">C</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 151 1115 1858 1181">
-        <span id="w_100" class="ocr_word" title="bbox 151 1120 283 1166" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">λέοιν</ins>
-          </span>
-        </span>
         <span id="w_101" class="ocr_word" title="bbox 331 1116 713 1166" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">Κωνσταντίνου</ins>
@@ -586,16 +576,11 @@
         </span>
         <span id="w_113" class="ocr_word" title="bbox 1683 1212 1856 1243" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐπονο-</ins>
+            <ins title="nlp 2.00">ἐπονομάζομεν.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 152 1267 1861 1338">
-        <span id="w_114" class="ocr_word" title="bbox 152 1271 383 1338" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μάζομεν.</ins>
-          </span>
-        </span>
         <span id="w_115" class="ocr_word" title="bbox 458 1270 543 1321" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
