--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0469.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0469.html
@@ -372,16 +372,11 @@
             <ins class="alt" title="nlp 1.00">αὖθις</ins>
           </span>
         </span>
-        <span id="w_69" class="ocr_word" title="bbox 1705 905 1853 935" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">καrα-</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 161 967 513 1033">
-        <span id="w_70" class="ocr_word" title="bbox 161 967 452 1033" lang="grc">
+        <span id="w_70_0" class="ocr_word" title="bbox 161 967 452 1033">
           <span class="alternatives">
-            <ins title="nlp 2.00">σκεψόμεθα”.</ins>
+            <ins class="alt" title="nlp 2.00">κατασκεψόμεθα”.</ins>
           </span>
         </span>
       </span>
