--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0532.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0532.html
@@ -806,23 +806,18 @@
             <ins class="alt" title="nlp 1.00">στόλου</ins>
           </span>
         </span>
-        <span id="w_157" class="ocr_word" title="bbox 1733 1665 1883 1711" lang="grc">
+        <span id="w_157_0" class="ocr_word" title="bbox 1733 1665 1883 1711">
           <span class="alternatives">
-            <ins title="nlp 2.00">μαχο-</ins>
+            <ins class="alt" title="nlp 2.00">μαχομένους</ins>
           </span>
         </span>
-        <span id="w_158" class="ocr_word" title="bbox 1913 1668 1947 1698">
+        <span id="w_157_1" class="ocr_word" title="bbox 1733 1665 1883 1711">
           <span class="alternatives">
-            <ins title="nlp 2.00">D</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 187 1719 1888 1789">
-        <span id="w_159" class="ocr_word" title="bbox 187 1743 364 1789" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μένους</ins>
-          </span>
-        </span>
         <span id="w_160" class="ocr_word" title="bbox 409 1728 708 1788" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἡττηθῆναι.</ins>
@@ -1377,9 +1372,14 @@
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_267" class="ocr_word" title="bbox 962 2647 1177 2716" lang="grc">
+        <span id="w_267_0" class="ocr_word" title="bbox 962 2647 1177 2716">
           <span class="alternatives">
-            <ins title="nlp 2.00">Κάστρου</ins>
+            <ins class="alt" title="nlp 2.00">κάστρου</ins>
+          </span>
+        </span>
+        <span id="w_267_1" class="ocr_word" title="bbox 962 2647 1177 2716">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_268" class="ocr_word" title="bbox 1215 2646 1441 2716" lang="grc">
@@ -1390,11 +1390,6 @@
         <span id="w_269" class="ocr_word" title="bbox 1480 2669 1621 2715" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἑτέρῳ</ins>
-          </span>
-        </span>
-        <span id="w_270" class="ocr_word" title="bbox 1658 2650 1884 2715" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀνέθετο,</ins>
           </span>
         </span>
       </span>
