--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0419.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0419.html
@@ -1268,7 +1268,7 @@
         </span>
         <span id="w_242_1" class="ocr_word" title="bbox 1551 2518 1777 2584">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins title="nlp 2.00">30</ins>
           </span>
         </span>
       </span>
