--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0342.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0342.html
@@ -492,11 +492,6 @@
             <ins class="alt" title="nlp 2.00">ὄπισθεν.</ins>
           </span>
         </span>
-        <span id="w_96_1" class="ocr_word" title="bbox 203 1070 432 1117">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_97" class="ocr_word" title="bbox 506 1065 813 1130" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">σφαιρίζοντι</ins>
@@ -534,7 +529,7 @@
         </span>
         <span id="w_104" class="ocr_word" title="bbox 1841 1084 1894 1114" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐν</ins>
+            <ins title="nlp 2.00">ὲν C</ins>
           </span>
         </span>
       </span>
@@ -863,11 +858,6 @@
             <ins class="alt" title="nlp 2.00">ἢ</ins>
           </span>
         </span>
-        <span id="w_168_1" class="ocr_word" title="bbox 1143 1708 1174 1752">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_169" class="ocr_word" title="bbox 1214 1689 1480 1753" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">προσαίτης</ins>
@@ -880,7 +870,7 @@
         </span>
         <span id="w_171" class="ocr_word" title="bbox 1632 1708 1722 1751" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὴν</ins>
+            <ins title="nlp 2.00">τὴν χεῖρα</ins>
           </span>
         </span>
       </span>
@@ -1202,11 +1192,6 @@
             <ins class="alt" title="nlp 2.00">ἐδείκνυ·</ins>
           </span>
         </span>
-        <span id="w_234_1" class="ocr_word" title="bbox 425 2224 646 2277">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_235" class="ocr_word" title="bbox 686 2235 1028 2295" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">στερνοτυπῶν</ins>
@@ -1229,7 +1214,7 @@
         </span>
         <span id="w_239" class="ocr_word" title="bbox 1378 2229 1784 2298" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐκθαμβούμενος</ins>
+            <ins title="nlp 2.00">ἐκθαμβούμενος καὶ</ins>
           </span>
         </span>
       </span>
