--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0344.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0344.html
@@ -457,11 +457,6 @@
             <ins class="alt" title="nlp 2.00">πρωΐας</ins>
           </span>
         </span>
-        <span id="w_86_1" class="ocr_word" title="bbox 490 1077 680 1138">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_87" class="ocr_word" title="bbox 708 1072 732 1124" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὁ</ins>
@@ -489,7 +484,7 @@
         </span>
         <span id="w_92" class="ocr_word" title="bbox 1614 1068 1770 1121" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αὐτοῦ</ins>
+            <ins title="nlp 2.00">αὐτοῦ ὁμολογίας</ins>
           </span>
         </span>
       </span>
@@ -660,11 +655,6 @@
             <ins class="alt" title="nlp 2.00">μετ᾿</ins>
           </span>
         </span>
-        <span id="w_127_0_1" class="ocr_word" title="bbox 1011 1404 1098 1450">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_127_1" class="ocr_word" title="bbox 1011 1404 1098 1450">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">ἐπιμελείας</ins>
@@ -672,7 +662,7 @@
         </span>
         <span id="w_128" class="ocr_word" title="bbox 1471 1380 1722 1449" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀπείργειν</ins>
+            <ins title="nlp 2.00">ἀπείργειν αὐτὸν</ins>
           </span>
         </span>
       </span>
@@ -1434,11 +1424,6 @@
             <ins class="alt" title="nlp 2.00">προσκαλεῖται?᾿</ins>
           </span>
         </span>
-        <span id="w_277_1" class="ocr_word" title="bbox 1179 2758 1568 2812">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_278" class="ocr_word" title="bbox 1602 2771 1621 2799">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">8</ins>
@@ -1451,7 +1436,7 @@
         </span>
         <span id="w_280" class="ocr_word" title="bbox 1774 2750 1797 2798" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὁ</ins>
+            <ins title="nlp 2.00">ὁ οm</ins>
           </span>
         </span>
       </span>
