--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0470.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0470.html
@@ -148,16 +148,11 @@
         </span>
         <span id="w_26" class="ocr_word" title="bbox 1698 1206 1873 1251" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φαινο-</ins>
+            <ins title="nlp 2.00">φαινομένῳ</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 172 1263 1872 1332">
-        <span id="w_27" class="ocr_word" title="bbox 172 1264 301 1329" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μένῳ</ins>
-          </span>
-        </span>
         <span id="w_28" class="ocr_word" title="bbox 349 1265 509 1315" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐδόκει</ins>
@@ -892,16 +887,11 @@
         </span>
         <span id="w_169" class="ocr_word" title="bbox 1589 2524 1863 2560" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐκτενεστέ-</ins>
+            <ins title="nlp 2.00">ἐκτενεστέρας</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 168 2582 1857 2653">
-        <span id="w_170" class="ocr_word" title="bbox 168 2607 256 2653" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ρας</ins>
-          </span>
-        </span>
         <span id="w_171" class="ocr_word" title="bbox 304 2582 388 2647" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὰς</ins>
