--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0586.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0586.html
@@ -572,7 +572,7 @@
         </span>
         <span id="w_108" class="ocr_word" title="bbox 1096 1247 1302 1314" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἑσπέρα</ins>
+            <ins title="nlp 2.00">(ἑσπέρα</ins>
           </span>
         </span>
         <span id="w_109" class="ocr_word" title="bbox 1349 1250 1403 1297" lang="grc">
