--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0471.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0471.html
@@ -572,9 +572,9 @@
             <ins class="alt" title="nlp 1.00">διαπλῳζομένους</ins>
           </span>
         </span>
-        <span id="w_108" class="ocr_word" title="bbox 1750 1269 1823 1328" lang="grc">
+        <span id="w_108_0" class="ocr_word" title="bbox 1750 1269 1823 1328">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐξ-</ins>
+            <ins class="alt" title="nlp 2.00">ἐξέπεμπεν.</ins>
           </span>
         </span>
       </span>
@@ -582,11 +582,6 @@
         <span id="w_109" class="ocr_word" title="bbox 66 1368 100 1399">
           <span class="alternatives">
             <ins title="nlp 2.00">D</ins>
-          </span>
-        </span>
-        <span id="w_110" class="ocr_word" title="bbox 125 1364 354 1411" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἔπεμπεν.</ins>
           </span>
         </span>
         <span id="w_111" class="ocr_word" title="bbox 420 1344 548 1395" lang="grc">
@@ -952,7 +947,7 @@
       <span class="ocr_line" title="bbox 49 1961 1823 2034">
         <span id="w_181" class="ocr_word" title="bbox 49 1970 305 2027" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">377 νόθων</ins>
+            <ins title="nlp 2.00">νόθων</ins>
           </span>
         </span>
         <span id="w_182" class="ocr_word" title="bbox 350 1965 610 2034" lang="grc">
@@ -982,7 +977,7 @@
         </span>
         <span id="w_187" class="ocr_word" title="bbox 1437 1965 1544 2032" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">[τοῦ</ins>
+            <ins title="nlp 2.00">τοῦ</ins>
           </span>
         </span>
         <span id="w_188" class="ocr_word" title="bbox 1585 1961 1823 2031" lang="grc">
@@ -1197,7 +1192,7 @@
         </span>
         <span id="w_229" class="ocr_word" title="bbox 1548 2355 1650 2407" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins title="nlp 2.00">(καὶ</ins>
           </span>
         </span>
         <span id="w_230" class="ocr_word" title="bbox 1675 2352 1822 2412" lang="grc">
