--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0421.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0421.html
@@ -619,9 +619,9 @@
             <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_118" class="ocr_word" title="bbox 1636 1304 1791 1352" lang="grc">
+        <span id="w_118_0" class="ocr_word" title="bbox 1636 1304 1791 1352">
           <span class="alternatives">
-            <ins title="nlp 2.00">παρα-</ins>
+            <ins class="alt" title="nlp 2.00">παραδοῦναι</ins>
           </span>
         </span>
       </span>
@@ -629,11 +629,6 @@
         <span id="w_119" class="ocr_word" title="bbox 44 1381 75 1414">
           <span class="alternatives">
             <ins title="nlp 2.00">Β</ins>
-          </span>
-        </span>
-        <span id="w_120" class="ocr_word" title="bbox 98 1367 279 1416" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δοῦναι</ins>
           </span>
         </span>
         <span id="w_121" class="ocr_word" title="bbox 335 1384 392 1414" lang="grc">
@@ -1385,12 +1380,12 @@
             <ins class="alt" title="nlp 1.00">αὐτόν</ins>
           </span>
         </span>
-        <span id="w_270_0" class="ocr_word" title="bbox 1076 2679 1168 2749">
+        <span id="w_270_0_0" class="ocr_word" title="bbox 1076 2679 1168 2749">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">(εἰς</ins>
           </span>
         </span>
-        <span id="w_270_1" class="ocr_word" title="bbox 1076 2679 1168 2749">
+        <span id="w_270_0_1" class="ocr_word" title="bbox 1076 2679 1168 2749">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -1398,11 +1393,6 @@
         <span id="w_271" class="ocr_word" title="bbox 1204 2682 1543 2747" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τετρακοσίους</ins>
-          </span>
-        </span>
-        <span id="w_272" class="ocr_word" title="bbox 1582 2681 1636 2730" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δὲ</ins>
           </span>
         </span>
       </span>
